--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                         <div class="inputbox">
                             <span class="details">Name</span>
                             <input id="Name" type="text" class="form-control" name="Name" placeholder="Enter the Name" onkeyup="namevalidate()">
-                            <span class="details" id="namefield">dddd</span>
+                            <span class="details" id="namefield"></span>
                         </div>
 
                         <div class="inputbox">
@@ -337,7 +337,7 @@
 
                         <div class="inputbox">
                             <span class="details">Ph No</span>
-                            <input id="phNumber" type="text" name="phoneNumber" placeholder="Enter the Number" onkeyup="Phonevalidate()" maxlength="10" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');">
+                            <input id="phNumber" type="text" name="phoneNumber" placeholder="Enter the Number" onkeyup="Phonevalidate()" maxlength="10">
                             <span class="details" id="phfield"></span>
                         </div>
 
